--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "disc-games",
+  "name": "throw-mode",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -34,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.15.0",
+    "node-sass": "^4.14.1",
+    "prettier": "2.1.2"
   }
 }
